--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,18 @@
 main{
   min-height: 80vh;
 }
+.shadowBestSeller {
+  box-shadow: 0 0 30px rgba(33, 33, 33, 0.2);
+}
+.cartIcon {
+  box-shadow: 0 0 0 5px #67ade9;
+  margin: 0 auto; 
+  background-color: white; 
+  border-radius: 50%; 
+  width: 80px; 
+  height: 80px; 
+  margin-top: -45px
+}
 
 /*Footer*/
 .footer-cta {
